Calling Uno functionality

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,11 @@
                 <input type="button" id="btnBlue" class="btn" value="Blue" onclick="setColor('blue')">
                 <input type="button" id="btnGreen" class="btn" value="Green" onclick="setColor('green')">
             </div>
+
+            <div id="uno-buttons" class="uno-buttons">
+                <input type="button" id="btnUnoMe" class="btn" value="Call Uno For Me" onclick="unoMe()">
+                <input type="button" id="btnUnoYou" class="btn" value="Call Uno On Another" onclick="unoYou()">
+            </div>
         </main>
 
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
