--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
             <div class="game-options">
                 <input type="button" id="btnOptions" class="game-btn" value="Options" onclick="showOptions()">
                 <input type="button" id="btnStart" class="game-btn" value="Start New Match" onclick="resetGame()">
+                <input type="button" id="btnDeal" class="game-btn" value="Deal New Hand" onclick="newHand()">
                 <input type="button" id="btnJoin" class="game-btn" value="Join" onclick="joinGame()">
                 <input type="button" id="btnDraw" class="game-btn" value="Draw" onclick="drawCard()">
             </div>
