Show players in lobby

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
                 <input type="button" id="btnSaveOptions" class="btn" value="Save" onclick="saveOptions()">
             </div>
 
+            <div class="status" id="playerList">Players: </div>
+
             <div class="status" id="status"></div>
 
             <div id="deck" class="deck">
