--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,9 @@
                 <div id="player1" class="grid-item player1"></div>
                 <div id="player2" class="grid-item player2"></div>
                 <div id="player3" class="grid-item player3"></div>
-                <div class="grid-item playArea1"></div>
+                <div class="grid-item playArea1">
+                    <div class="pile"></div>
+                </div>
                 <div class="grid-item playArea2">
                     <div id="deck" class="deck">
                         <div id="discard" class="discard">
