--- a/public/index.html
+++ b/public/index.html
@@ -36,10 +36,10 @@
             <div class="status" id="status"></div>
 
             <div id="players" class="players">
-                <div id="player0" class="grid-item player0"></div>
-                <div id="player1" class="grid-item player1"></div>
-                <div id="player2" class="grid-item player2"></div>
-                <div id="player3" class="grid-item player3"></div>
+                <div id="player0" class="grid-item playerOpponent"></div>
+                <div id="player1" class="grid-item playerOpponent"></div>
+                <div id="player2" class="grid-item playerOpponent"></div>
+                <div id="player3" class="grid-item playerOpponent"></div>
                 <div class="grid-item playArea1">
                     <div class="pile"></div>
                 </div>
@@ -50,9 +50,9 @@
                         </div>
                     </div>
                 </div>
-                <div id="player4" class="grid-item player4"></div>
-                <div id="player5" class="grid-item player5"></div>
-                <div id="player6" class="grid-item player6"></div>
+                <div id="player4" class="grid-item playerOpponent"></div>
+                <div id="player5" class="grid-item playerOpponent"></div>
+                <div id="player6" class="grid-item playerOpponent"></div>
                 <div id="playerSelf" class="grid-item playerSelf"></div>
             </div>
 
