--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                 <label><input type="checkbox" class="controlledCheckbox" name="stackDraw2" value="stackDraw2">Stack Draw 2s</label>
                 <label><input type="checkbox" class="controlledCheckbox" name="skipDraw2" value="skipDraw2">Skip Draw 2s</label>
                 <label><input type="checkbox" class="controlledCheckbox" name="reverseDraw2" value="reverseDraw2">Reverse Draw 2s</label>
-                <label><input type="checkbox" class="controlledCheckbox" name="stackDraw4" value="stackDraw4">Stack Draw 4s</label>
+                <!--<label><input type="checkbox" class="controlledCheckbox" name="stackDraw4" value="stackDraw4">Stack Draw 4s</label>-->
                 <input type="button" id="btnSaveOptions" class="btn" value="Save" onclick="saveOptions()">
             </div>
 
@@ -44,11 +44,8 @@
                     <div class="pile"></div>
                 </div>
                 <div class="grid-item playArea2">
-                    <div id="deck" class="deck">
-                        <div id="discard" class="discard">
-                            <div id="discard-top" class="card"></div>
-                        </div>
-                    </div>
+                    <div id="discard" class="card"></div>
+                    <div id="color-bar" class="color-bar"></div>
                 </div>
                 <div id="player4" class="grid-item playerOpponent"></div>
                 <div id="player5" class="grid-item playerOpponent"></div>
