Let host boot players

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,16 @@
             <div id="message-container"></div>
         </div>
 
+        <div id="bootModal" class="modal">
+            <div class="modal-content">
+                <p id="bootMessage">Are you sure you want to boot this player?</p>
+                <div class="modal-buttons">
+                    <button id="confirmBoot" class="btn">Yes</button>
+                    <button id="cancelBoot" class="btn">Cancel</button>
+                </div>
+            </div>
+        </div>
+
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
         <script type="text/javascript" src="/main.js"></script>
 
