More clear UI before game start

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,8 @@
                     <input type="button" id="btnUnoYou" class="btn" value="Call Uno On Another" onclick="unoYou()">
                     <input type="button" id="btnDraw" class="game-btn" value="Draw" onclick="drawCard()">
                 </div>
+                
+                <div id="waitingOverlay">Waiting for the host to start the game</div>
             </main>
         </div>
 
