Skip and reverse draw 4s

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
                             <label><input type="checkbox" class="controlledCheckbox" name="skipDraw2" value="skipDraw2">Skip Draw 2s</label>
                             <label><input type="checkbox" class="controlledCheckbox" name="reverseDraw2" value="reverseDraw2">Reverse Draw 2s</label>
                             <label><input type="checkbox" class="controlledCheckbox" name="stackDraw4" value="stackDraw4">Stack Draw 4s</label>
+                            <label><input type="checkbox" class="controlledCheckbox" name="skipDraw4" value="skipDraw4">Skip Draw 4s</label>
+                            <label><input type="checkbox" class="controlledCheckbox" name="reverseDraw4" value="reverseDraw4">Reverse Draw 4s</label>
                             <input type="button" id="btnSaveOptions" class="btn" value="Save" onclick="saveOptions()">
                         </div>
                         <div id="right-options">
